modify cnn and rnn

--- a/3-neural-networks/4-CNN.ipynb
+++ b/3-neural-networks/4-CNN.ipynb
@@ -20,13 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pad 操作\n",
-    "\n",
-    "- **calc_pad_dims_2D**: Compute the padding necessary to ensure that convolving `X` with a 2D kernel of shape `kernel_shape` and stride `stride` produces outputs with dimension `out_dim`.\n",
-    "- **calc_pad_dims_1D**: Compute the padding necessary to ensure that convolving `X` with a 1D kernel of shape `kernel_shape` and stride `stride` produces outputs with length `l_out`.\n",
-    "- **pad1D**: Zero-pad a 3D input volume `X` along the second dimension.\n",
-    "- **pad2D**: Zero-pad a 4D input volume `X` along the second and third dimensions.\n",
-    "- **dilate**: Dilate the 4D volume `X` by `d`."
+    "### Pad 操作"
    ]
   },
   {
@@ -654,6 +648,95 @@
     "a_conv = conv2D(a, np.ones((3, 3, 1, 1)), 1, 0)\n",
     "print(a.reshape(a.shape[1], a.shape[2]))\n",
     "print(a_conv.reshape(a_conv.shape[1], a_conv.shape[2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 池化操作"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pool2D(X, kernel_shape, stride=1, pad=0, mode=\"max\"):\n",
+    "        \"\"\"\n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        X : :py:class:`ndarray <numpy.ndarray>` of shape `(n_ex, in_rows, in_cols, in_ch)`\n",
+    "            The input volume consisting of `n_ex` examples, each with dimension\n",
+    "            (`in_rows`, `in_cols`, `in_ch`).\n",
+    "        kernel_shape : 2-tuple\n",
+    "            The dimension of a single 2D filter/kernel in the current layer\n",
+    "        stride : int\n",
+    "            The stride/hop of the convolution kernels as they move over the\n",
+    "            input volume. Default is 1.\n",
+    "        pad : int, tuple, or 'same'\n",
+    "            The number of rows/columns of 0's to pad the input. Default is 0.\n",
+    "        mode : {\"max\", \"average\"}\n",
+    "            The pooling function to apply.\n",
+    "        \"\"\"\n",
+    "        in_ch = out_ch = X.shape[3]\n",
+    "\n",
+    "        n_ex, in_rows, in_cols, nc_in = X.shape\n",
+    "        (fr, fc), s, p = kernel_shape, stride, pad\n",
+    "        X_pad, (pr1, pr2, pc1, pc2) = pad2D(X, p, kernel_shape, s)\n",
+    "\n",
+    "        out_rows = np.floor(1 + (in_rows + pr1 + pr2 - fr) / s).astype(int)\n",
+    "        out_cols = np.floor(1 + (in_cols + pc1 + pc2 - fc) / s).astype(int)\n",
+    "\n",
+    "        if mode == \"max\":\n",
+    "            pool_fn = np.max\n",
+    "        elif mode == \"average\":\n",
+    "            pool_fn = np.mean\n",
+    "\n",
+    "        Y = np.zeros((n_ex, out_rows, out_cols, out_ch))\n",
+    "        for m in range(n_ex):\n",
+    "            for i in range(out_rows):\n",
+    "                for j in range(out_cols):\n",
+    "                    for c in range(out_ch):\n",
+    "                        # calculate window boundaries, incorporating stride\n",
+    "                        i0, i1 = i * s, (i * s) + fr\n",
+    "                        j0, j1 = j * s, (j * s) + fc\n",
+    "\n",
+    "                        xi = X_pad[m, i0:i1, j0:j1, c]\n",
+    "                        Y[m, i, j, c] = pool_fn(xi)\n",
+    "\n",
+    "        return Y\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4  5]\n",
+      " [ 6  7  8  9 10 11]\n",
+      " [12 13 14 15 16 17]\n",
+      " [18 19 20 21 22 23]\n",
+      " [24 25 26 27 28 29]\n",
+      " [30 31 32 33 34 35]]\n",
+      "[[ 7.  8.  9. 10. 11.]\n",
+      " [13. 14. 15. 16. 17.]\n",
+      " [19. 20. 21. 22. 23.]\n",
+      " [25. 26. 27. 28. 29.]\n",
+      " [31. 32. 33. 34. 35.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(36).reshape(1, 6, 6, 1)\n",
+    "a_pool = pool2D(a, (2, 2))\n",
+    "print(a.reshape(a.shape[1], a.shape[2]))\n",
+    "print(a_pool.reshape(a_pool.shape[1], a_pool.shape[2]))"
    ]
   },
   {
